# kl25z-bike-computer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  kl25z-bike-computer-schematic-0.1.fzz  makefile
cmake/toolchains/: frdm-kl25z-gcc.cmake
src/: bikecomputer.c  bikecomputer.cpp  ble_radio.cpp  ble_radio.h  debug.cpp  debug.h  led.cpp  led.h  nrf8001_ble_radio.h  wheel.cpp  wheel.h
src/nrf8001/: hal_aci_tl_mbed.cpp  lib_aci_mbed.cpp  nrf8001_aci.cpp  nrf8001_ble_radio.cpp  nrf8001_ble_radio.h
src/nrf8001/aci/: aci_cmds.h  aci_evts.h  aci_queue.cpp  acilib.cpp  hal_aci_tl.h  hal_platform.h
